test_suite/tests/ui/common/attribute_with_wrong_case.stderr
error: Unknown validator `charLenMax`. Did you mean `char_len_max`?
 --> tests/ui/common/attribute_with_wrong_case.rs:3:19
  |
3 | #[nutype(validate(charLenMax = 255))]
  |                   ^^^^^^^^^^
